// Vitest Snapshot v1

exports[`Collapse > panel work > header work 1`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right ix-collapse-panel-expand-icon\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 0</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > panel work > header work 2`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right ix-collapse-panel-expand-icon\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"right\\"><path d=\\"M710.763 521.104 457.104 774.763c-4.998 4.998-12.869 5.001-17.867.003l-27.39-27.39c-5-5-4.939-12.927.06-17.926l217.281-217.28-217.28-217.281c-5-4.999-5.06-12.927-.062-17.925l27.39-27.39c5-5 12.87-4.996 17.868.002l253.659 253.659c4.998 4.998 4.998 12.872 0 17.87Z\\"></path></svg></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">hello header</span>
          <!---->
        </div>
        <!---->
      </div><span class=\\"ix-header-suffix\\"><i class=\\"ix-icon ix-icon-left\\" role=\\"img\\" aria-label=\\"left\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"left\\"><path d=\\"m313.575 521.104 253.659 253.659c4.998 4.998 12.869 5.001 17.867.003l27.39-27.39c5-5 4.939-12.927-.06-17.926L395.15 512.17l217.28-217.281c5-4.999 5.06-12.927.062-17.925l-27.39-27.39c-5-5-12.87-4.996-17.868.002L313.575 503.234c-4.998 4.998-4.998 12.872 0 17.87Z\\"></path></svg></i></span>
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > render work 1`] = `
"<div class=\\"ix-collapse ix-collapse-md\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right ix-collapse-panel-expand-icon\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 0</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel ix-collapse-panel-expanded\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right ix-collapse-panel-expand-icon\\" style=\\"transform: rotate(90deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 1</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right ix-collapse-panel-expand-icon\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
      <!---->
      <div class=\\"ix-header-content\\">
        <div class=\\"ix-header-title-wrapper\\"><span class=\\"ix-header-title\\">header 2</span>
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub name=\\"ix-collapse-transition\\" appear=\\"true\\" persisted=\\"false\\" css=\\"true\\">
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
